# real-time-ml-contrails-prediction

./: .gitattributes  .gitignore  README.md  quix.yaml
docker-compose/: Makefile  contrail-predictor.yml  historical-feature-pipeline.yml  live-feature-pipeline.yml
services/contrail_predictor/: Makefile  README.md  app.yaml  app.yml  pip.conf  pyproject.toml  setup_historical_config.env  setup_historical_config.sh  setup_live_config.env  setup_live_config.sh
services/contrail_predictor/notebooks/: flight_data_manipulation.ipynb  flight_data_training.ipynb  sql_training.ipynb
services/contrail_predictor/notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
services/contrail_predictor/notebooks/catboost_info/learn/: events.out.tfevents
services/contrail_predictor/src/: baseline_model.py  config.py  data_preprocessing.py  features_engineering.py  hopsworks_fs.py  main.py  model_factory.py  prediction.py  restapi.py  training.py  utils.py
services/features_dashboard/: Makefile  README.md  pyproject.toml  setup_config.sh
services/features_dashboard/src/: backend.py  frontend.py  hopsworks_fs.py  paths.py  plot.py
services/features_dashboard/tools/infrastructures/: hopsworks.py
services/flights_producer/: Dockerfile  Makefile  README.md  app.yaml  app.yml  historical.env  live_flights_setup.env  pyproject.toml  setup_historical_config.sh  setup_live_config.sh
services/flights_producer/src/: config.py  main.py  path.py  paths.py
services/flights_producer/src/aviation_edge_api/: flight.py  historical_flights.py  live_flights.py
services/flights_to_feature_store/: Dockerfile  README.md  app.yaml  pyproject.toml  setup_historical_config.sh  setup_live_config.sh
services/flights_to_feature_store/src/: main.py
services/flights_to_feature_store/tools/: pyproject.toml
services/flights_to_feature_store/tools/infrastructures/: hopsworks.py
services/flights_with_weather/: Dockerfile  README.md  app.yaml  pyproject.toml  setup_historical_config.sh  setup_live_config.sh
services/flights_with_weather/src/: config.py  main.py
services/flights_with_weather/src/ecmwf_api/: era5_weather.nc  flight.py  historical_flights.py  live_flights.py
services/flights_with_weather/src/gfs_api/: flight.py  gfs_latest.grib2  live_weather.py  test.py
services/flights_with_weather/src/meteomatics_api/: flight.py  live_flights.py  live_weather.py
tools/: pyproject.toml  setup_config.sh
tools/infrastructures/: hopsworks.py
tools/src/: config.py
tools/src/hopsworks/: hopsworks_flights_reader.py  hopsworks_flights_writer.py
