[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Ramane23 <contactsouley@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
opensky-api = {path = "opensky-api/python"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
